--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ recognition/TRANSFORMER_43909856/__pycache__
 
 # Ignore dataset files
 recognition/TRANSFORMER_43909856/imagenette
+recognition/TRANSFORMER_43909856/dataset
 
 # Ignore directory with saved models
 recognition/TRANSFORMER_43909856/models
