--- a/recognition/ImprovedUNet-ISIC2018-45293915/.gitignore
+++ b/recognition/ImprovedUNet-ISIC2018-45293915/.gitignore
@@ -160,7 +160,12 @@ cython_debug/
 #.idea/
 
 # datasets folder
-/datasets
+datasets/training_groundtruth/*
+datasets/validation_groundtruth/*
+datasets/test_groundtruth/*
+datasets/training_input/*
+datasets/validation_input/*
+datasets/test_input/*
 
 # modelenv environment folder
 /modelenv
@@ -169,4 +174,4 @@ cython_debug/
 *.keras
 
 # Ignore anything inside output folder
-/output/*
+output/*
