--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ recognition/Siamese Classifier for Alzheimer's disease (s4589541)/checkpoints/
 recognition/Siamese Classifier for Alzheimer's disease (s4589541)/results/
 recognition/Siamese Classifier for Alzheimer's disease (s4589541)/ADNI_AD_NC_2D.zip
 recognition/Siamese Classifier for Alzheimer's disease (s4589541)/a.py
+recognition/Siamese Classifier for Alzheimer's disease (s4589541)/README.pdf
+recognition/Siamese Classifier for Alzheimer's disease (s4589541)/README.pdf
